--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -230,7 +230,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\knockout1.js" />
-    <Content Include="Scripts\knockout3.js" />
+    <Content Include="Scripts\knockout2.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
     <Content Include="Scripts\i18n\angular-locale_af.js" />
@@ -491,6 +491,7 @@
     <Content Include="Scripts\Product.js" />
     <Content Include="Scripts\ProductsViewModel.js" />
     <Content Include="Scripts\shuffler.js" />
+    <Content Include="solution_scripts\appcore.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -515,7 +516,7 @@
     <Content Include="Views\Home\Angular1.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Knockout3.cshtml" />
+    <Content Include="Views\Home\Knockout2.cshtml" />
     <Content Include="Scripts\version.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
