Added animation support to newer version of angular.js

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -210,6 +210,78 @@
     <Content Include="solution_scripts\Angular-1.1.5\Animate-1.1.5.angularMove.css" />
     <Content Include="solution_scripts\Angular-1.1.5\appcore.js" />
     <Content Include="solution_scripts\Angular-1.1.5\Animate-1.1.5.angular3dRotate.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounce.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceIn.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceInDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceInLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceInRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceInUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceOut.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceOutDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceOutLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceOutRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\bounceOutUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeIn.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInDownBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInLeftBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInRightBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeInUpBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOut.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutDownBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutLeftBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutRightBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\fadeOutUpBig.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flash.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flip.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flipInX.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flipInY.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flipOutX.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\flipOutY.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\hinge.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\lightSpeedIn.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\lightSpeedOut.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\pulse.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rollIn.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rollOut.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateIn.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateInDownLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateInDownRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateInUpLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateInUpRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateOut.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateOutDownLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateOutDownRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateOutUpLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rotateOutUpRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\rubberBand.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\shake.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideInDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideInLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideInRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideInUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideOutDown.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideOutLeft.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideOutRight.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\slideOutUp.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\swing.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\tada.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\allanimationsnnames\wobble.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\angular-animate.js" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\angular-cookies.js" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\angular.js" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\angular.min.js" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\animate.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\animate.min.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\page_style.css" />
+    <Content Include="solution_scripts\Angular-1.2.9\all-angular\appcore.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -231,12 +303,13 @@
     <Content Include="packages.config" />
     <Content Include="Views\Home\Knockout1.cshtml" />
     <Content Include="Views\Home\ShuffleCards.cshtml" />
-    <Content Include="Views\Home\Angular1.cshtml" />
+    <Content Include="Views\Home\Angular115.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Knockout2.cshtml" />
     <Content Include="solution_scripts\Angular-1.1.5\Animate-1.1.5-angular3DCube.css" />
     <Content Include="solution_scripts\Angular-1.1.5\Animate-1.1.5angularVariant.css" />
+    <Content Include="Views\Home\Angular129.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
